# clings

./: CMakeLists.txt  README.md  vcpkg.json
katas/: compilation_error.c  run_error.c  success.c  test_error.c
katas/00_intro/: intro.c
katas/01_variables/: README.md  variables_1.c  variables_2.c  variables_3.c
src/: clings.c
src/configuration/: CMakeLists.txt
src/configuration/get_kata_list/: get_kata_list.h  in_memory_kata_list.c  yaml_kata_list.c
src/configuration/get_kata_list/yaml/: yaml_test.c  yml.c  yml.h
src/execution/: CMakeLists.txt  execution.c  execution.h  execution_errors.c  execution_errors.h  execution_test.c
src/katas/: CMakeLists.txt  katas.c  katas.h  katas_test.c
src/result_handler/: CMakeLists.txt  result_handler.c  result_handler.h
src/test_utils/: CMakeLists.txt  clings_test_utils.h  test_utils.h
src/types/: CMakeLists.txt  mocks.c  mocks.h  sized_string.c  sized_string_test.c  types.h
